--- a/NeuroApp/Storyboard/Quiz/QuizPartTwo.storyboard
+++ b/NeuroApp/Storyboard/Quiz/QuizPartTwo.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -46,18 +46,38 @@
                                     <constraint firstAttribute="height" priority="1" constant="200" id="C3A-t8-InF"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLy-jn-RqY">
+                                <rect key="frame" x="20" y="803" width="374" height="10"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="10" id="UFo-pW-yaG"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J2u-At-gcT" customClass="ProgressBar" customModule="NeuroApp" customModuleProvider="target">
+                                <rect key="frame" x="30" y="763" width="354" height="30"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="IDS-IO-0qL"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="cUP-Lg-hUv" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="42c-L9-bZO"/>
                             <constraint firstItem="TRS-2p-kCH" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="40" id="6Cc-S6-JxM"/>
+                            <constraint firstItem="RLy-jn-RqY" firstAttribute="top" secondItem="J2u-At-gcT" secondAttribute="bottom" constant="10" id="6eA-yo-1N2"/>
                             <constraint firstItem="TRS-2p-kCH" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="7f1-kR-42Y"/>
                             <constraint firstItem="gxw-Jk-1xZ" firstAttribute="top" secondItem="cUP-Lg-hUv" secondAttribute="bottom" constant="20" id="A1S-MK-BxZ"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="J2u-At-gcT" secondAttribute="trailing" constant="30" id="CXi-pD-5Ls"/>
                             <constraint firstItem="TRS-2p-kCH" firstAttribute="top" secondItem="gxw-Jk-1xZ" secondAttribute="bottom" constant="30" id="DU7-nw-pwi"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="RLy-jn-RqY" secondAttribute="trailing" constant="20" id="EPO-Qv-YUe"/>
                             <constraint firstItem="cUP-Lg-hUv" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="OcC-w8-1sR"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="gxw-Jk-1xZ" secondAttribute="trailing" constant="20" id="S02-x1-P9z"/>
                             <constraint firstItem="gxw-Jk-1xZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="ZnU-tN-rHU"/>
+                            <constraint firstItem="J2u-At-gcT" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="cXz-s8-ht8"/>
+                            <constraint firstItem="RLy-jn-RqY" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="esG-h7-BKm"/>
+                            <constraint firstItem="RLy-jn-RqY" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="iSR-Rh-jOk"/>
                             <constraint firstItem="cUP-Lg-hUv" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="50" id="wVK-MR-3N8"/>
                         </constraints>
                     </view>
@@ -66,6 +86,7 @@
                     <connections>
                         <outlet property="nextButton" destination="TRS-2p-kCH" id="F9M-FN-VuQ"/>
                         <outlet property="optionView" destination="gxw-Jk-1xZ" id="ecz-9w-Bp7"/>
+                        <outlet property="progressBar" destination="J2u-At-gcT" id="QgG-vC-7KD"/>
                         <outlet property="questionLabel" destination="cUP-Lg-hUv" id="isL-7i-5Ky"/>
                         <segue destination="DSI-Bc-Xc7" kind="show" identifier="ShowPreviewViewController" id="5dm-9t-GvP"/>
                     </connections>
@@ -96,6 +117,9 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
